# OpenSCORE

./: .gitignore  README.md  background_activity.py  clinical_comment.py  diagnostic_significance.py  dialogs.py  directory_sidebar.py  findings.py  main.py  main_tab.py  main_tab_view.py  main_toolbar.py  main_window.py  menu_bar.py  patient_details.py  patient_info_tab.py  patient_referral_tab.py  pyproject.toml  recording_conditions.py  report.json  requirements.txt  score_schema.json  setup.py  standard_item.py  start_session_dialog.py  test.py  test_openscore.py  ui_openscore_6.ui  ui_openscore_7.ui  ui_openscore_8.ui
.github/workflows/: build_1.yml
data/: README.md  specified_paths.txt  test_report.json  test_report.score  test_report_1.json
data/eeg_sample/: 00000768_s003t000.score
helpers/: eegreportparser.py
modules/: background_activity.py  clinical_comment.py  diagnostic_significance.py  findings.py  main_tab_view.py  main_toolbar.py  main_window.py  menu_bar.py  patient_details.py  patient_info_tab.py  patient_referral_tab.py  recording_conditions.py  standard_dialogs.py  start_session_dialog.py  ui_state.py
score_schema/: README.md  __init__.py  background.py  common.py  diagnostic.py  episodes.py  export_schema.py  hed.py  interictal.py  patient.py  recording.py  report.py
src/controllers/: background_activity_controller.py  clinical_comments_controller.py  diagnostic_significance_controller.py  episodes_controller.py  interictal_controller.py  main_window_controller.py  sleep_controller.py  (+5 more)
tests/: test_report_persistence.py  test_score_schema.py
(+65 files in other folders)
